apps/base/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: homer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web # use 'web' for HTTP only
  rules:
    - host: homer.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homer
              port:
                number: 8080
